Add netlify identity

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,3 +26,5 @@
 
 <link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/normalize.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="{{ .Site.BaseURL }}css/main.css" />
+
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
