--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     {{ partial "head" . }}
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       {{ partial "header" . }}
+      
       {{ block "content" . }}
       {{ end }}
       {{ partial "footer" . }}
+      </div>
     </div>
   </body>
 </html>
