--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,48 +1,90 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139272781-1"></script>
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=UA-139272781-1"
+></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
+  window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
+  function gtag() {
+    dataLayer.push(arguments);
+  }
 
-    gtag('js', new Date());
+  gtag("js", new Date());
 
-    gtag('config', 'UA-139272781-1');
+  gtag("config", "UA-139272781-1");
 </script>
 <!-- End Global site tag (gtag.js) -->
 
-<meta charset="utf-8">
-<meta content="IE=edge" http-equiv="X-UA-Compatible">
-<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+<meta charset="utf-8" />
+<meta content="IE=edge" http-equiv="X-UA-Compatible" />
+<meta
+  content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  name="viewport"
+/>
 <title>Girls Code Lincoln</title>
 
-<link href="/img/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-<link href="/img/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
-<link href="/img/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
-<link href="/img/favicon/site.webmanifest" rel="manifest">
-<link color="#5bbad5" href="/img/favicon/safari-pinned-tab.svg" rel="mask-icon">
-<link href="/img/favicon/favicon.ico" rel="shortcut icon">
-<meta content="#da532c" name="msapplication-TileColor">
-<meta content="/img/favicon/browserconfig.xml" name="msapplication-config">
-<meta content="#ffffff" name="theme-color">
+<link
+  href="/img/favicon/apple-touch-icon.png"
+  rel="apple-touch-icon"
+  sizes="180x180"
+/>
+<link
+  href="/img/favicon/favicon-32x32.png"
+  rel="icon"
+  sizes="32x32"
+  type="image/png"
+/>
+<link
+  href="/img/favicon/favicon-16x16.png"
+  rel="icon"
+  sizes="16x16"
+  type="image/png"
+/>
+<link href="/img/favicon/site.webmanifest" rel="manifest" />
+<link
+  color="#5bbad5"
+  href="/img/favicon/safari-pinned-tab.svg"
+  rel="mask-icon"
+/>
+<link href="/img/favicon/favicon.ico" rel="shortcut icon" />
+<meta content="#da532c" name="msapplication-TileColor" />
+<meta content="/img/favicon/browserconfig.xml" name="msapplication-config" />
+<meta content="#ffffff" name="theme-color" />
 
-<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css?family=Quicksand"
+  rel="stylesheet"
+/>
 
-<link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" rel="stylesheet">
-<link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" rel="stylesheet">
+<link
+  crossorigin="anonymous"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+  rel="stylesheet"
+/>
+<link
+  crossorigin="anonymous"
+  href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+  rel="stylesheet"
+/>
 
-<link href="css/main.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet" />
 
-<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+<script
+  crossorigin="anonymous"
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+></script>
+<script
+  crossorigin="anonymous"
+  integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+></script>
+<script
+  crossorigin="anonymous"
+  integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+></script>
 <script src="js/parallax.min.js"></script>
 <script src="js/index.js"></script>
