--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,62 +1,86 @@
 <nav class="navbar navbar-expand-md row bg-blue navbar-dark">
   <div class="navbar-brand">
-      <img alt="Girls Code Lincoln" src="img/girlscodelincoln-nav.svg"/>
+    <img alt="Girls Code Lincoln" src="img/girlscodelincoln-nav.svg" />
   </div>
   <!-- donate button to show on smaller screen widths - shows left of the navbar toggler -->
   <a
-          class="cta-btn nav-link font-weight-bold btn btn-sm ml-auto mr-2 d-md-none"
-          href="/donate"
-          id="donate-sm"
-          rel="noopener" target="_blank">
-      Donate
+    class="cta-btn nav-link font-weight-bold btn btn-sm ml-auto mr-2 d-md-none"
+    href="/donate"
+    id="donate-sm"
+    rel="noopener"
+    target="_blank"
+  >
+    Donate
   </a>
-  <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-          data-target="#navbarNav" data-toggle="collapse" type="button">
-  <span class="navbar-toggler-icon d-flex justify-content-center align-items-center">
+  <button
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    class="navbar-toggler"
+    data-target="#navbarNav"
+    data-toggle="collapse"
+    type="button"
+  >
+    <span
+      class="navbar-toggler-icon d-flex justify-content-center align-items-center"
+    >
       <i aria-hidden="true" class="fas fa-bars"></i>
-  </span>
+    </span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto align-items-md-center">
-          <li class="nav-item">
-              <a class="nav-link intrapage-nav" href="#about-us">About Us</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link intrapage-nav" href="#get-involved">Get Involved</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link intrapage-nav" href="#podcast">Podcast</a>
-          </li>
-          <!-- <li class="nav-item">
+    <ul class="navbar-nav ml-auto align-items-md-center">
+      <li class="nav-item">
+        <a class="nav-link intrapage-nav" href="#about-us">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link intrapage-nav" href="#get-involved">Get Involved</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link intrapage-nav" href="#podcast">Podcast</a>
+      </li>
+      <!-- <li class="nav-item">
             <a class="nav-link intrapage-nav" href="#our-clubs">Our Clubs</a>
           </li> -->
-          <!-- <li class="nav-item">
+      <!-- <li class="nav-item">
             <a class="nav-link intrapage-nav" href="#sponsors-partners">Sponsors & Partners</a>
           </li> -->
-          <li class="nav-item">
-              <a class="nav-link" href="/shop" id="shop" rel="noopener" target="_blank">
-                  Shop
-              </a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="https://mailchi.mp/97830933907d/signup" id="email-list-header"
-                 rel="noopener" target="_blank">
-                  Mailing List
-              </a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link intrapage-nav" href="#contact">Contact</a>
-          </li>
-          <!-- donate button to show on larger screen widths - shows right of all other nav links -->
-          <li class="nav-item d-none d-md-block">
-              <a
-                      class="cta-btn nav-link font-weight-bold btn ml-lg-2"
-                      href="/donate"
-                      id="donate"
-                      rel="noopener" target="_blank">
-                  Donate
-              </a>
-          </li>
-      </ul>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          href="/shop"
+          id="shop"
+          rel="noopener"
+          target="_blank"
+        >
+          Shop
+        </a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          href="https://mailchi.mp/97830933907d/signup"
+          id="email-list-header"
+          rel="noopener"
+          target="_blank"
+        >
+          Mailing List
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link intrapage-nav" href="#contact">Contact</a>
+      </li>
+      <!-- donate button to show on larger screen widths - shows right of all other nav links -->
+      <li class="nav-item d-none d-md-block">
+        <a
+          class="cta-btn nav-link font-weight-bold btn ml-lg-2"
+          href="/donate"
+          id="donate"
+          rel="noopener"
+          target="_blank"
+        >
+          Donate
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
