Implement exp dates for partners

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -339,20 +339,22 @@
       class="col-10 d-flex flex-wrap justify-content-center mx-auto align-items-center"
     >
       {{ range where $.Site.Data.partners.companies "now" "lt" ".expirationdate" }}
-        {{ if ne .url nil }}
-          <a
-            href="{{ .url }}"
-            rel="noopener"
-            target="_blank"
-          >
-        {{ end }}
-          <img
-            alt="{{ .name }}"
-            class="px-3 logo"
-            src="{{ .logo }}"
-          />
-        {{ if ne .url nil }}
-          </a>
+        {{ if or (eq .expirationdate "") ((time .expirationdate).Before now) }}
+          {{ if ne .url nil }}
+            <a
+              href="{{ .url }}"
+              rel="noopener"
+              target="_blank"
+            >
+          {{ end }}
+            <img
+              alt="{{ .name }}"
+              class="px-3 logo"
+              src="{{ .logo }}"
+            />
+          {{ if ne .url nil }}
+            </a>
+          {{ end }}
         {{ end }}
       {{ end }}
     </div>
