--- a/layouts/index.html
+++ b/layouts/index.html
@@ -315,7 +315,7 @@
       class="col-10 d-flex flex-wrap justify-content-center mx-auto mb-5 align-items-center"
     >
       {{ range $.Site.Data.sponsors.companies  }}
-        {{ if or (eq .expirationdate "") ((time .expirationdate).Before now) }}
+        {{ if or (eq .expirationdate "") ((time .expirationdate).After now) }}
           {{ if ne .url nil }}
             <a
               href="{{ .url }}"
@@ -339,7 +339,7 @@
       class="col-10 d-flex flex-wrap justify-content-center mx-auto align-items-center"
     >
       {{ range where $.Site.Data.partners.companies "now" "lt" ".expirationdate" }}
-        {{ if or (eq .expirationdate "") ((time .expirationdate).Before now) }}
+        {{ if or (eq .expirationdate "") ((time .expirationdate).After now) }}
           {{ if ne .url nil }}
             <a
               href="{{ .url }}"
