Add netlify identity script to index

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -72,6 +72,8 @@
 
 <link href="css/main.css" rel="stylesheet" />
 
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 <script
   crossorigin="anonymous"
   src="https://code.jquery.com/jquery-3.3.1.min.js"
